package Strategies;

public abstract class Strategy {
}
