package Strategies.strategyX;

public class StrategyX_Leader extends StrategyX{
}
