package Strategies.strategyX;

public class StrategyX_Member extends StrategyX{

}
