package communication;

public class MessageManager {
}
