package task;

public class TaskManager {
	public int additional_tasks_num_ = 0;
}
