package root;

public class OutPutManager {
}
